fixed alignment

--- a/public/css/recipePage/filter.css
+++ b/public/css/recipePage/filter.css
@@ -4,7 +4,7 @@
   gap: 20px;
   margin-top: 20px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 160px;
   max-width: 1200px;
 }
 
